--- a/MvcProjectCamp/Views/Category/Index.cshtml
+++ b/MvcProjectCamp/Views/Category/Index.cshtml
@@ -5,28 +5,50 @@
 
 <!DOCTYPE html>
 
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 
 <h3>Mvc Kamp Tablo Örnegi </h3>
 <br />
-<table>
+<table class="table table-hover">
     <tr>
-        <td>Id</td>
-        <td>Adı</td>
-        <td>Açıklama</td>
-        <td>Durum</td>
-        
+        <th>Id</th>
+        <th>Adı</th>
+        <th>Açıklama</th>
+        <th>Durum</th>
+        <th>Güncelle</th>
+
     </tr>
     <tr>
         <td>1</td>
         <td>Eğitim </td>
         <td>Açıklama yapıldı</td>
         <td>true</td>
+        <td><button class="btn btn-success">Güncelle</button></td>
     </tr>
     <tr>
         <td>2</td>
         <td>Sağlık </td>
         <td>Açıklama yapıldı</td>
         <td>true</td>
+        <td><button class="btn btn-success">Güncelle</button></td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Kitap </td>
+        <td>Açıklama yapıldı</td>
+        <td>true</td>
+        <td><button class="btn btn-success">Güncelle</button></td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Sinema </td>
+        <td>Açıklama yapıldı</td>
+        <td>true</td>
+        <td><button class="btn btn-success">Güncelle</button></td>
     </tr>
 </table>
+<button class="btn btn-info">Yeni kategori</button>
+<button class="btn btn-warning">kategori listesi</button>
+<button class="btn btn-danger">kategori Açıklamaları</button>
+
 
