--- a/MvcProjectCamp/Views/AdminCategory/Index.cshtml
+++ b/MvcProjectCamp/Views/AdminCategory/Index.cshtml
@@ -22,8 +22,8 @@
             <th>@item.CategoryId</th>
             <td>@item.CategoryName</td>
             <td>@item.CategoryDescription</td>
-            <td><a href="#" class="btn btn-danger">Sil</a> </td>
-            <td><a href="#" class="btn btn-warning">Güncelle</a> </td>
+            <td><a href="/AdminCategory/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a> </td>
+            <td><a href="/AdminCategory/UpdateCategory/@item.CategoryId" class="btn btn-warning">Güncelle</a> </td>
             <td><a href="#" class="btn btn-primary">Başlıklar</a> </td>
         </tr>
     }
