--- a/MvcProjectCamp/Views/Writer/EditWriter.cshtml
+++ b/MvcProjectCamp/Views/Writer/EditWriter.cshtml
@@ -1,16 +1,17 @@
 ﻿@model EntityLayer.Concrete.Writer
-
 @{
-    ViewBag.Title = "AddWriter";
+    ViewBag.Title = "EditWriter";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Yeni Yazar Ekleme</h1>
 <br />
-
-@using (Html.BeginForm("AddWriter", "Writer", FormMethod.Post))
+<h2>Yazar Düzenleme Sayfası</h2>
+@using (Html.BeginForm("EditWriter", "Writer", FormMethod.Post))
 {
 <div class="form-group">
+    @Html.Label("Yazar Id")
+    @Html.TextBoxFor(x => x.WriterId, new { @class = "form-control" })
+    <br />
     @Html.Label("Yazar Adı")
     @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.WriterName)
@@ -31,14 +32,18 @@
     @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.WriterImage)
     <br />
-    @Html.Label("Yazar Ünvanı")
-    @Html.TextBoxFor(x => x.WriterTitle, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.WriterTitle)
-    <br />
     @Html.Label("Yazar Hakkında")
     @Html.TextBoxFor(x => x.WriterAbout, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.WriterAbout)
     <br />
-    <button class="btn btn-info">Yazarı Ekle</button>
+    @Html.Label("Yazar Ünvanı")
+    @Html.TextBoxFor(x => x.WriterTitle, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.WriterTitle)
+    <br />
+    @Html.Label("Yazar Görsel Linki")
+    @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.WriterImage)
+    <br />
+    <button class="btn btn-success">Değişiklikleri uygula</button>
 </div>
 }
