Content operation added

--- a/MvcProjectCamp/Views/Heading/Index.cshtml
+++ b/MvcProjectCamp/Views/Heading/Index.cshtml
@@ -98,7 +98,7 @@
                                     <span class="@color">@item.Category.CategoryName</span>
                                 </td>
                                 <td class="project-actions text-right">
-                                    <a class="btn btn-primary btn-sm" href="">
+                                    <a class="btn btn-primary btn-sm" href="/Content/ContentByHeading/@item.HeadingId">
                                         <i class="fas fa-folder">
                                         </i>
                                         İçerikler
@@ -127,7 +127,7 @@
     </section>
 </body>
 </html>
-
+<a href="/Heading/AddHeading" class="btn btn-info">Yeni Başlık Girişi</a>
 
 
 @*<br />
